Fixing cookie banner for too small devices

--- a/Webclient/src/app/cookie_banner/cookie_banner.scss
+++ b/Webclient/src/app/cookie_banner/cookie_banner.scss
@@ -10,6 +10,7 @@
   top: 0;
   right: 0;
   z-index: 1000;
+  overflow-y: scroll;
 }
 
 #cookieContainer {
